# Star-Rail-MusicPkgDecryptor

./: CMakeLists.txt  README.md  build.bat
src/: Firefly.cpp  Firefly.h  main.cpp
